# csopesy-mco

./: CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.h  Process.h  Scheduler.cpp  Scheduler.h  UI_Utils.h  app  ascii.txt  config.txt  myproc.txt  process01.txt  process02.txt  process03.txt  process04.txt  process05.txt  process06.txt  process07.txt  process08.txt  process09.txt  process10.txt
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
include/: ConfigParser.h  ProcessManager.h  Scheduler.h  UI_Utils.h
src/: ConfigParser.cpp  ConsoleManager.cpp  Scheduler.cpp  main.cpp
